[package]
name = "scrypt-crate"
description = "scrypt bindings"
version = "1.0.1"
authors = ["Fedor Indutny <fedor@indutny.com>"]
categories = ["cryptography"]
keywords = ["crypto","scrypt"]
license = "MIT"
repository = "https://github.com/derivepass/derivepass-web"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dumb-crypto = "^3.0.0"
wasm-bindgen = "0.2"
wee_alloc = "0.4"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
lto = true
